<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@color/m_body_bgcolor_grey"
    android:orientation="vertical">

    <include
        layout="@layout/top_toolbar_left"/>

    <com.yq.news.view.InputMethodRelativeLayout
        android:id="@+id/rl_modifypwd_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_modifypwd_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dip"
                android:background="@color/m_divider_line_color"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip">

                <TextView
                    android:id="@+id/tv_modifypwd_old"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:minWidth="80dp"
                    android:text="@string/more_pwd_old"
                    android:textColor="@color/m_font_color_normal"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dip"
                    android:layout_toRightOf="@id/tv_modifypwd_old"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_pwd_old"
                        android:layout_width="match_parent"
                        android:layout_height="47.5dp"
                        android:layout_marginBottom="-13dp"
                        android:background="@null"
                        android:hint="@string/more_pwd_old_hint"
                        android:inputType="textPassword"
                        android:maxLength="32"
                        android:gravity="end|center_vertical"
                        android:paddingRight="13dip"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/m_grey_bgcolor_light"
                        android:textSize="15sp"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dip"
                android:layout_marginLeft="15dip"
                android:background="@color/m_divider_line_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip">

                <TextView
                    android:id="@+id/tv_modifypwd_new"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:minWidth="80dp"
                    android:text="@string/more_pwd_new"
                    android:textColor="@color/m_font_color_normal"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dip"
                    android:layout_toRightOf="@id/tv_modifypwd_new"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_pwd_new"
                        android:layout_width="match_parent"
                        android:layout_height="47.5dp"
                        android:layout_marginBottom="-13dp"
                        android:background="@null"
                        android:gravity="end|center_vertical"
                        android:hint="@string/more_pwd_new_hint"
                        android:inputType="textPassword"
                        android:maxLength="32"
                        android:paddingRight="13dip"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/m_grey_bgcolor_light"
                        android:textSize="15sp"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dip"
                android:layout_marginLeft="15dip"
                android:background="@color/m_divider_line_color"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip">

                <TextView
                    android:id="@+id/tv_modifypwd_query"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:minWidth="80dp"
                    android:text="@string/more_pwd_query"
                    android:textColor="@color/m_font_color_normal"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dip"
                    android:layout_toRightOf="@id/tv_modifypwd_query"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_pwd_again"
                        android:layout_width="match_parent"
                        android:layout_height="47.5dp"
                        android:layout_marginBottom="-13dp"
                        android:background="@null"
                        android:gravity="end|center_vertical"
                        android:hint="@string/more_pwd_query_hint"
                        android:inputType="textPassword"
                        android:maxLength="32"
                        android:paddingRight="13dip"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/m_grey_bgcolor_light"
                        android:textSize="15sp"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dip"
                android:background="@color/m_divider_line_color"/>
        </LinearLayout>

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_modifypwd_input"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:textSize="12sp"
            android:text="@string/more_pwd_modify_tip"
            android:textColor="#A7A7A7"/>

        <TextView
            android:onClick="forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/hint"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:textSize="12sp"
            android:textColor="@color/binding"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ll_modifypwd_input"
            android:text="忘记原密码？"/>

    </com.yq.news.view.InputMethodRelativeLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/sure_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        fancy:fb_textSize = "16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        fancy:fb_borderColor="#FFFFFF"
        android:background="@drawable/round_btn"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/binding"
        fancy:fb_focusColor="@color/binding"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="25dp"
        fancy:fb_text="确定"
        fancy:fb_textColor="#FFFFFF" />

</LinearLayout>